tests/fixtures/invalid/int_list.py
# Cannot call int() with List[int]
x = int([1, 2, 3])
